Sign-up page updated to username with validation criteria. User favorites broken

--- a/frontend/public/styles.css
+++ b/frontend/public/styles.css
@@ -103,3 +103,15 @@ h1 {
 .card-link {
     text-decoration: none;
 }
+
+.weak {
+    color: red;
+}
+
+.medium {
+    color: orange;
+}
+
+.strong {
+    color: green;
+}
