react-bootstrap added. all pages updated. favorite button updated and updates from empty to red if station id is included in user's favorites. progress bar added on sign-up page

--- a/frontend/public/styles.css
+++ b/frontend/public/styles.css
@@ -104,14 +104,16 @@ h1 {
     text-decoration: none;
 }
 
-.weak {
+.favorite {
     color: red;
 }
 
-.medium {
-    color: orange;
+.favorite:hover {
+    cursor: pointer;
+    color: darkred
 }
 
-.strong {
-    color: green;
+.notfavorite:hover {
+    cursor: pointer;
+    color: black;
 }
