user sign-up page updated to include criteria and check-logic

--- a/frontend/public/styles.css
+++ b/frontend/public/styles.css
@@ -117,3 +117,16 @@ h1 {
     cursor: pointer;
     color: black;
 }
+
+.fa-x {
+    color: red;
+}
+
+.fa-check {
+    color: green;
+}
+
+.checker {
+    font-size: .9rem;
+    font-style: italic;
+}
