--- a/frontend/public/styles.css
+++ b/frontend/public/styles.css
@@ -19,18 +19,15 @@
     padding-top: 8px;
 }
 
-.AccountHandle {
+.navbuddy {
     position: absolute;
-    top: 0;
-    right: 0;
     z-index: 1;
+    width: 100%;
+    filter: drop-shadow(5px 5px 2px #afafaf);
 }
 
-.EVSearch {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1;
+.dropshadow {
+    filter: drop-shadow(2px 2px 2px #afafaf);
 }
 
 @import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
